refactor: update pnpm workspace configuration and remove unused auth entity

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,4 +1,9 @@
-onlyBuiltDependencies:
-  - '@prisma/client'
-packages: 
+packages:
   - .
+
+onlyBuiltDependencies:
+  - '@nestjs/core'
+  - '@prisma/client'
+  - '@prisma/engines'
+  - '@swc/core'
+  - prisma
