fix: update prisma client name and set default scope for Phone model
- Changed the name of the generated Prisma client in package.json for better identification.
- Set default value for the scope field in the Phone model to EVERYONE in both schema.prisma and user.prisma.
- Removed commented-out user registration code in auth.service.ts for cleaner code.
- Updated import path for PrismaClient in prisma.service.ts and changed omitted field from password to hashedPassword for better security practices.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.11.0",
     "argon2": "^0.43.0",
+    "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
     "nodemailer": "^7.0.4",
     "passport": "^0.7.0",
