--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "argon2": "^0.43.0",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
+    "ioredis": "^5.6.1",
     "nodemailer": "^7.0.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@biomejs/biome": "2.0.6",
