feat: enhance application configuration and user management
- Added JWT configuration options to .env.example for token management.
- Updated .gitignore to exclude GraphQL schema files.
- Enhanced ESLint configuration by adding new rules for TypeScript safety.
- Introduced MediaModule for file uploads and management using Cloudinary.
- Refactored User model to enforce unique constraints on profileId and username.
- Implemented response interceptor for consistent API responses.
- Created new entities for user-related data and updated user service methods for better user retrieval.
- Added tests for new features and modules to ensure reliability.

--- a/biome.json
+++ b/biome.json
@@ -13,6 +13,13 @@
     "attributePosition": "auto",
     "bracketSpacing": true
   },
+  "assist": {
+    "actions": {
+      "source": {
+        "organizeImports": "off"
+      }
+    }
+  },
   "linter": {
     "enabled": true,
     "rules": {
