feat: integrate Redis for caching and enhance user registration process
- Added Redis module and service for caching capabilities.
- Updated user registration to include unique profileId generation using a Snowflake ID generator.
- Refactored email service to adjust base URL for verification links.
- Introduced new DTOs for change password functionality and improved validation.
- Cleaned up unused code and removed the token service for JWT management.
- Enhanced user model to enforce unique constraints on profileId and username.
- Updated various service methods to improve user management and password recovery processes.

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@
 # server with the `prisma dev` CLI command, when not choosing any non-default ports or settings. The API key, unlike the 
 # one found in a remote Prisma Postgres URL, does not contain any sensitive information.
 
+PORT=4000
 DATABASE_URL="postgresql://postgres:postgres@postgres:5432/facebook-clone?schema=public"
 
 COOKIE_SECRET="jiasduijasidjuiasdjiosjiojasijdsai"
