--- a/package.json
+++ b/package.json
@@ -50,8 +50,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1",
-    "uuid": "^11.1.0"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@biomejs/biome": "2.0.6",
