refactor(auth): streamline authentication module and remove email guard
- Removed EmailGuard and EmailStrategy to simplify the authentication process.
- Updated AuthController to eliminate unnecessary guards and streamline user registration.
- Refactored AuthModule to remove unused providers.
- Enhanced user resolver and service to support user updates with new UpdateUserInput DTO.
- Updated user entity to reflect changes in user model structure.

--- a/.env.example
+++ b/.env.example
@@ -20,10 +20,14 @@ REFRESH_TOKEN_TIME_LIFE="7d"
 JWT_SECRET=your_super_secret_key
 JWT_EXPIRES_IN=1d
 
-JWT_SECRET=your_super_secret_key
-JWT_EXPIRES_IN=1d
-
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 CLOUDINARY_URL=
+
+EMAIL_USER=
+EMAIL_PASS=
+
+REDIS_HOST="127.0.0.1"
+REDIS_PORT="6379"
+REDIS_PASSWORD="eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81"
