feat(auth): implement session management and login functionality
- Added a new Session model to track user sessions.
- Updated User model to include an optional session relation.
- Created a TokenService to handle JWT generation and refresh token storage.
- Implemented login functionality in AuthService, including session creation and token management.
- Removed unused EmailGuard and EmailStrategy.
- Added recovery account functionality with email verification.
- Updated package.json and schema.prisma for new model and enum changes.

--- a/package.json
+++ b/package.json
@@ -106,16 +106,14 @@
       "html-minifier": "npm:html-minifier-terser@6.1.0"
     },
     "onlyBuiltDependencies": [
-      "@biomejs/biome",
+      "@apollo/protobufjs",
       "@nestjs/core",
       "@prisma/client",
       "@prisma/engines",
       "@scarf/scarf",
       "@swc/core",
       "argon2",
-      "esbuild",
-      "prisma",
-      "unrs-resolver"
+      "prisma"
     ]
   },
   "prisma": {
