--- a/backend/package.json
+++ b/backend/package.json
@@ -50,7 +50,8 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "ua-parser-js": "^2.0.4"
   },
   "devDependencies": {
     "@biomejs/biome": "2.0.6",
