--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,7 @@
 		"start": "next start",
 		"lint": "next lint",
 		"format": "biome format --write .",
-    "typecheck": "tsc --noEmit",
+		"typecheck": "tsc --noEmit",
 		"prepare": "husky",
 		"storybook": "storybook dev -p 6006",
 		"build-storybook": "storybook build"
@@ -35,8 +35,10 @@
 		"@next/third-parties": "15.3.4",
 		"@opentelemetry/api": "1.9.0",
 		"@opentelemetry/api-logs": "0.202.0",
+		"@radix-ui/react-avatar": "1.1.10",
 		"@radix-ui/react-dialog": "^1.1.14",
 		"@radix-ui/react-separator": "^1.1.7",
+		"@radix-ui/react-slot": "1.2.3",
 		"@radix-ui/react-tooltip": "^1.2.7",
 		"@tanstack/react-table": "^8.21.3",
 		"@vercel/otel": "1.13.0",
@@ -54,6 +56,7 @@
 		"react": "^19.0.0",
 		"react-day-picker": "^9.7.0",
 		"react-dom": "^19.0.0",
+		"react-icons": "5.5.0",
 		"react-resizable-panels": "^3.0.3",
 		"recharts": "^3.0.0",
 		"server-only": "0.0.1",
