chore: add Supabase environment variables to .env.example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -31,3 +31,9 @@ EMAIL_PASS=
 REDIS_HOST="127.0.0.1"
 REDIS_PORT="6379"
 REDIS_PASSWORD="eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81"
+
+SUPABASE_DATABASE_PASSWORD=
+SUPABASE_PROJECT_URL=
+SUPABASE_PROJECT_API_KEY=
+SUPABASE_ACCESS_KEY_ID=
+SUPABASE_SECRET_ACCESS_KEY=
