feat(auth): add public decorators to authentication routes and implement throttler guards feat(users): expose user queries as public chore: add passport-custom dependency refactor(supabase): make SupabaseService globally available delete: remove unused Supabase example service

--- a/backend/package.json
+++ b/backend/package.json
@@ -48,6 +48,7 @@
     "multer": "^2.0.1",
     "nodemailer": "^7.0.4",
     "passport": "^0.7.0",
+    "passport-custom": "^1.1.1",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
