--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/throttler": "^6.4.0",
+    "@nestjs/websockets": "^11.1.3",
     "@prisma/client": "^6.11.1",
     "@supabase/supabase-js": "^2.50.3",
     "argon2": "^0.43.0",
