--- a/frontend/package.json
+++ b/frontend/package.json
@@ -86,6 +86,7 @@
 		"eslint": "^9",
 		"eslint-config-next": "15.3.4",
 		"eslint-plugin-storybook": "^9.0.13",
+		"fluid-tailwind": "1.0.4",
 		"husky": "9.1.7",
 		"lint-staged": "16.1.2",
 		"playwright": "^1.53.1",
