--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@fluid-tailwind/tailwind-merge": "0.0.3",
     "@formatjs/intl-localematcher": "0.6.1",
     "@next/third-parties": "15.3.4",
     "@opentelemetry/api": "1.9.0",
