feat: add Docker Compose configuration for frontend service
- Introduced a new compose.yaml file to define the frontend service with build context and environment variables.
- Configured the service to restart automatically and mapped port 3000 for external access.
- Defined a custom network to facilitate communication between containers.

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,8 +1,8 @@
 services:
-    next-app:
-        container_name: next-app
+    frontend:
+        container_name: frontend
         build:
-            context: .
+            context: ./frontend
             dockerfile: Dockerfile
             args:
                 ENV_VARIABLE: ${ENV_VARIABLE}
