--- a/backend/package.json
+++ b/backend/package.json
@@ -40,6 +40,7 @@
 		"@prisma/client": "^6.11.1",
 		"@supabase/supabase-js": "^2.50.3",
 		"argon2": "^0.43.0",
+		"axios": "^1.10.0",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.2",
 		"cloudinary": "^2.7.0",
